--- a/app/src/main/res/drawable/ic_blood_pressure.xml
+++ b/app/src/main/res/drawable/ic_blood_pressure.xml
@@ -3,6 +3,11 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+<group
+  android:scaleX="0.7"
+  android:scaleY="0.7"
+  android:pivotX="12"
+  android:pivotY="12">
   <path
       android:fillColor="#FF000000"
       android:pathData="M12,2Q4.005,8.825 4,13.8a8,8 0,1 0,16 0Q20,8.82 12,2ZM12,20a5.954,5.954 0,0 1,-6 -6.2c0,-2.34 1.95,-5.44 6,-9.14 4.05,3.7 6,6.79 6,9.14A5.954,5.954 0,0 1,12 20Z"
@@ -18,4 +23,5 @@
       android:pathData="M11.343,14.884a0.922,0.922 0,0 0,1.3 0l2.61,-3.914L11.343,13.58a0.922,0.922 0,0 0,0 1.3Z"
       android:strokeAlpha="0.25"
       android:fillAlpha="0.25"/>
+</group>
 </vector>
