--- a/app/src/main/res/drawable/ic_monitor_heart_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_monitor_heart_black_24dp.xml
@@ -3,6 +3,11 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+  <group
+      android:scaleX="0.7"
+      android:scaleY="0.7"
+      android:pivotX="12"
+      android:pivotY="12">
   <path
       android:fillColor="#FF000000"
       android:pathData="M20,4H4A2.006,2.006 0,0 0,2 6V9H4V6H20V9h2V6A2.006,2.006 0,0 0,20 4Z"
@@ -18,4 +23,5 @@
       android:pathData="M14.89,7.55a1.04,1.04 0,0 0,-1.79 0L10,13.76 8.89,11.55A0.988,0.988 0,0 0,8 11H2v2H7.38L9.1,16.45A1.014,1.014 0,0 0,10 17a0.988,0.988 0,0 0,0.89 -0.55L14,10.24l1.11,2.21A0.988,0.988 0,0 0,16 13h6V11H16.62Z"
       android:strokeAlpha="0.25"
       android:fillAlpha="0.25"/>
+  </group>
 </vector>
