--- a/app/src/main/res/drawable/underline.xml
+++ b/app/src/main/res/drawable/underline.xml
@@ -1,4 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item >
+        <shape
+            android:shape="rectangle">
+            <stroke android:width="1dp" android:color="@color/blue" />
+            <solid android:color="@color/white" />
+        </shape>
+    </item>
 
-</shape>
+    <item android:bottom="10dp">
+        <shape
+            android:shape="rectangle">
+            <stroke android:width="1dp" android:color="@color/white" />
+            <solid android:color="#00000000" />
+        </shape>
+    </item>
+
+</layer-list>
