--- a/app/src/main/res/drawable/curved_rectangle.xml
+++ b/app/src/main/res/drawable/curved_rectangle.xml
@@ -6,11 +6,11 @@
     <!-- view background color -->
     <!--        android:color="#9948F6"-->
     <solid
-        android:color="#5624d0">
+        android:color="#7647ed">
     </solid>
 
     <!-- Here is the corner radius -->
     <corners
-        android:radius="50dp"   >
+        android:radius="30dp"   >
     </corners>
 </shape>
