--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -19,7 +19,7 @@
         android:background="@drawable/concentric_circles" >
 
         <TextView
-            android:id="@+id/textReading"
+            android:id="@+id/mainReadingText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -30,7 +30,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textDesc"
+            android:id="@+id/main_reading_text_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -41,46 +41,46 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:id="@+id/user_controls"
+        android:id="@+id/type_of_reading_user_controls"
         android:layout_height="70dp"
         android:layout_alignBottom="@id/custom_view"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
+        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/recordImageView"
+            android:id="@+id/heartbeat_selector"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:layout_gravity="center"
             android:background="@drawable/curved_rect_active"
-            android:src="@drawable/ic_heart_beat_signal" />
+            android:src="@drawable/ic_heart_beat_selector_active" />
 
         <ImageView
-            android:id="@+id/touchImageView"
+            android:id="@+id/spo2_selector"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:layout_gravity="center"
             android:background="@drawable/icon_background"
-            android:src="@drawable/ic_spo2_24dp" />
+            android:src="@drawable/ic_spo2_selector_inactive" />
 
         <ImageView
-            android:id="@+id/dashboardImageView"
+            android:id="@+id/stress_index_selector"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:layout_gravity="center"
             android:background="@drawable/icon_background"
-            android:src="@drawable/ic_stress_index_24dp" />
+            android:src="@drawable/ic_stress_index_selector_inactive" />
 
         <ImageView
-            android:id="@+id/settingsImageView1"
+            android:id="@+id/respiration_rate_selector"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_weight="1"
@@ -90,17 +90,17 @@
             android:src="@drawable/ic_respiration_rate" />
 
         <ImageView
-            android:id="@+id/settingsImageView2"
+            android:id="@+id/heart_rate_variability_selector"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_weight="1"
             android:layout_margin="5dp"
             android:layout_gravity="center"
             android:background="@drawable/icon_background"
-            android:src="@drawable/ic_monitor_heart_black_24dp" />
+            android:src="@drawable/ic_heart_rate_variability_selector_inactive" />
 
         <ImageView
-            android:id="@+id/settingsImageView3"
+            android:id="@+id/blood_pressure_selector"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_weight="1"
