--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -5,17 +5,19 @@
 
     <ImageView
         android:id="@+id/back_arrow"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
+        android:scaleType="fitStart"
         android:src="@drawable/ic_baseline_arrow_back_ios_24" />
 
     <ImageView
         android:id="@+id/hamburger_menu"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="10dp"
         android:layout_gravity="right"
+        android:scaleType="fitEnd"
         android:src="@drawable/ic_baseline_menu_24" />
 
 </androidx.appcompat.widget.Toolbar>
