--- a/app/src/main/res/layout/dashboard.xml
+++ b/app/src/main/res/layout/dashboard.xml
@@ -50,7 +50,7 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:id="@+id/heartbeat_selector"
+            android:id="@+id/heart_beat_selector"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_weight="1"
@@ -87,7 +87,7 @@
             android:layout_margin="5dp"
             android:layout_gravity="center"
             android:background="@drawable/icon_background"
-            android:src="@drawable/ic_respiration_rate" />
+            android:src="@drawable/ic_respiration_rate_selector_inactive" />
 
         <ImageView
             android:id="@+id/heart_rate_variability_selector"
@@ -107,17 +107,18 @@
             android:layout_margin="5dp"
             android:layout_gravity="center"
             android:background="@drawable/icon_background"
-            android:src="@drawable/ic_blood_pressure" />
+            android:src="@drawable/ic_blood_pressure_selector_inactive" />
 
     </LinearLayout>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/graph_text"
         android:layout_alignBottom="@id/custom_view"
-        android:text="BPM Tracker"
-        android:textFontWeight="700"
+        android:text="BPM TRACKER"
         android:layout_marginLeft="20dp"
+        android:textSize="13dp"
         android:textStyle="bold"
         android:textColor="@color/black" />
 
@@ -137,6 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
             android:text="Monthly"
+            android:textSize="13dp"
             android:textColor="@color/black"
             android:textStyle="bold"
             />
@@ -145,12 +147,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
+            android:textSize="13dp"
             android:text="Weekly" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="15dp"
+            android:textSize="13dp"
             android:text="Daily" />
 
     </LinearLayout>
@@ -164,28 +168,28 @@
 
         <View
             android:layout_width="0dp"
-            android:layout_weight="1.4"
+            android:layout_weight="0.9"
             android:layout_height="4dp"
             android:layout_alignBottom="@id/custom_view"
             android:background="@color/blue"/>
 
         <View
             android:layout_width="0dp"
-            android:layout_weight="1.4"
+            android:layout_weight="0.9"
             android:layout_height="1dp"
             android:layout_alignBottom="@id/custom_view"
             android:background="@color/gray"/>
 
         <View
             android:layout_width="0dp"
-            android:layout_weight="1.4"
+            android:layout_weight="0.9"
             android:layout_height="1dp"
             android:layout_alignBottom="@id/custom_view"
             android:background="@color/gray"/>
 
         <View
             android:layout_width="0dp"
-            android:layout_weight="2.8"
+            android:layout_weight="3.7"
             android:layout_height="1dp"
             android:layout_alignBottom="@id/custom_view"
             android:background="@color/gray"/>
